--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
 
   <script src="cytoscape-all-paths.js"></script>
-  <script src='samples/simpleBP.js'></script>
+  <script src='samples/test2.js'></script>
 
   <style>
     #cy {
